# nous-proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
nous_proxy/: anthropic.py  api_keys.py  auth.py  config.py  main.py  proxy.py  token_manager.py
scripts/: install.sh  nous-proxy.service
