[project]
name = "nous-proxy"
version = "0.1.0"
description = "NousResearch Portal OAuth -> REST API Proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
nous-proxy = "nous_proxy.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nous_proxy"]
